fix comment spacing

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12,6 +12,9 @@
 ******************************* LETTER SPACING *******************************
 *******************************************************************************/
 /*******************************************************************************
+******************************* RADIUS *******************************
+*******************************************************************************/
+/*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
 *******************************************************************************/
 /*!
@@ -14478,6 +14481,9 @@ progress {
 ******************************* LETTER SPACING *******************************
 *******************************************************************************/
 /*******************************************************************************
+******************************* RADIUS *******************************
+*******************************************************************************/
+/*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
 *******************************************************************************/
 body,
@@ -17550,6 +17556,9 @@ textarea {
 ******************************* LETTER SPACING *******************************
 *******************************************************************************/
 /*******************************************************************************
+******************************* RADIUS *******************************
+*******************************************************************************/
+/*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
 *******************************************************************************/
 .bg-FF5A29 {
@@ -17732,6 +17741,14 @@ textarea {
   letter-spacing: -0.66px;
 }
 
+.space_2_8 {
+  letter-spacing: -2.8px;
+}
+
+.space_2 {
+  letter-spacing: -2px;
+}
+
 .leading16 {
   line-height: 16px;
 }
@@ -17778,6 +17795,14 @@ textarea {
 
 .leading22_4 {
   line-height: 22.4px;
+}
+
+.radius10 {
+  border-radius: 10px;
+}
+
+.radius20 {
+  border-radius: 20px;
 }
 
 @media (max-width: 991.98px) {
@@ -17868,6 +17893,12 @@ textarea {
   .res-space_0_66 {
     letter-spacing: -0.66px;
   }
+  .res-space_2_8 {
+    letter-spacing: -2.8px;
+  }
+  .res-space_2 {
+    letter-spacing: -2px;
+  }
   .res-leading16 {
     line-height: 16px;
   }
@@ -17903,6 +17934,12 @@ textarea {
   }
   .res-leading22_4 {
     line-height: 22.4px;
+  }
+  .res-radius10 {
+    border-radius: 10px;
+  }
+  .res-radius20 {
+    border-radius: 20px;
   }
 }
 button,
